Fixed path resolving problems in Windows
git-svn-id: https://hawkscope.googlecode.com/svn/trunk@36 033809cf-e84d-0410-81fb-211d375de673